<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_history"
        android:title="@string/user" />

    <item
        android:id="@+id/nav_environment"
        android:icon="@drawable/ic_sun"
        android:title="@string/weather" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_export"
        android:title="@string/reports" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_save"
        android:title="@string/settings" />

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_delete"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
